gitops/apps/nextcloud/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
